Latest

Bug Fixes:
-Fixed loop refresh issue
-Fixed filename and mono pin refresh issue (any of those reset the track).
-Merged both FileStream (Asio and Bass) into a single filestream.
-Aded own channel info


Version 0.3.1

Bug Fixes
-Fixed Mixer which had wrong sample rate (Temporary fix, need further update)

New Node(s)
SetMixerLevel
-Allow Matrix Level on Mixer, update each channel the way you want :)

Version 0.3

Updated Nodes:

FileStream
-Added Loop Input pin
-Added Play Input Pin
-Changing the Mono Input Pin now resets the channel
-Added a Channel count Output Pin (1: Mono, 2: Stereo...)

AudioOut
-The AudioOut channel checks the play status of a FileStream to decide if it streams it or not.

New Node(s):

Mixer
-Added new Mixer Node, so we can play back multiple files on same channel.