@@ -56,8 +56,6 @@
     <Compile Include="BassAsioAudioInNode.cs" />
     <Compile Include="BassAsioOutputNode.cs" />
     <Compile Include="Lib\BassAsioUtils.cs" />
-    <Compile Include="Mixer\BassAsioMixerNode.cs" />
-    <Compile Include="Mixer\SetLevelMatrixNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +67,9 @@
       <Project>{8CC39D35-7F34-4B53-99CC-35BB088182AB}</Project>
       <Name>BassSound</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mixer\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
