@@ -59,6 +59,9 @@
     <Compile Include="Internals\Channels\ChannelInfo.cs" />
     <Compile Include="Internals\Channels\ChannelsManager.cs" />
     <Compile Include="Internals\Channels\FileChannelInfo.cs" />
+    <Compile Include="Internals\Channels\MixerChannelInfo.cs" />
+    <Compile Include="Mixer\BassMixerNode.cs" />
+    <Compile Include="Mixer\SetLevelMatrixNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Streams\BassFileStreamNode.cs" />
   </ItemGroup>
