@@ -5,10 +5,11 @@ using VVVV.PluginInterfaces.V1;
 using Un4seen.Bass;
 using Un4seen.Bass.AddOn.Mix;
 using vvvv.Utils;
+using BassSound.Internals;
 
 namespace vvvv.Nodes
 {
-    public class BassAsioMixerNode : IPlugin,IDisposable
+    public class BassMixerNode : IPlugin,IDisposable
     {
         #region Plugin Information
         public static IPluginInfo PluginInfo
@@ -17,9 +18,9 @@ namespace vvvv.Nodes
             {
                 IPluginInfo Info = new PluginInfo();
                 Info.Name = "Mixer";
-                Info.Category = "BassAsio";
+                Info.Category = "Bass";
                 Info.Version = "";
-                Info.Help = "MixerNode for Bass Asio";
+                Info.Help = "MixerNode for Bass";
                 Info.Bugs = "";
                 Info.Credits = "";
                 Info.Warnings = "";
@@ -37,21 +38,22 @@ namespace vvvv.Nodes
 
         private IPluginHost FHost;
 
+        private IValueIn FPinInIsDecoding;
         private IValueIn FPinInChanCount;
         private IValueIn FPinInChannels;
 
         private IValueOut FPinOutHandle;
 
-        private int FHandle = -1;
+        private int FHandle = 0;
         private List<int> FChannels = new List<int>();
 
         #region Set Plugin Host
         public void SetPluginHost(IPluginHost Host)
         {
-            //We play this channel trough Asio output, so we choose the device NOSOUND
-            Bass.BASS_Init(0, 48000, 0, IntPtr.Zero, null);
-
             this.FHost = Host;
+
+            this.FHost.CreateValueInput("Is Decoding", 1, null, TSliceMode.Single, TPinVisibility.OnlyInspector, out this.FPinInIsDecoding);
+            this.FPinInIsDecoding.SetSubType(0, 1, 1, 0, false, true, true);
 
             this.FHost.CreateValueInput("Channel Count", 1, null, TSliceMode.Single, TPinVisibility.True, out this.FPinInChanCount);
             this.FPinInChanCount.SetSubType(0, double.MaxValue, 1, 0, false, false, true);
@@ -81,31 +83,40 @@ namespace vvvv.Nodes
         #region Evaluate
         public void Evaluate(int SpreadMax)
         {
+            bool updatechans = false;
+
             #region Reset the mixer
             if (this.FPinInChanCount.PinIsChanged)
             {
                 if (this.FHandle != 0)
                 {
-                    BassAsioUtils.DecodingChannels.Remove(this.FHandle);
-                    foreach (int channel in this.FChannels)
+                    ChannelInfo channelinfo = ChannelsManager.GetChannel(this.FHandle);
+
+                    if (channelinfo.BassHandle != null)
                     {
-                        BassMix.BASS_Mixer_ChannelRemove(channel);
+                        foreach (int channel in this.FChannels)
+                        {
+                            BassMix.BASS_Mixer_ChannelRemove(channelinfo.BassHandle.Value);
+                        }
+                        bool free = Bass.BASS_StreamFree(channelinfo.BassHandle.Value);
                     }
-                    bool free = Bass.BASS_StreamFree(this.FHandle);
                 }
 
                 double numchans;
                 this.FPinInChanCount.GetValue(0,out numchans);
-                this.FHandle = BassMix.BASS_Mixer_StreamCreate(44100, Convert.ToInt32(numchans), BASSFlag.BASS_STREAM_DECODE | BASSFlag.BASS_SAMPLE_FLOAT);
 
-                if (this.FHandle != 0)
-                {
-                    foreach (int channel in this.FChannels)
-                    {
-                        BassMix.BASS_Mixer_StreamAddChannel(this.FHandle, channel, BASSFlag.BASS_MIXER_MATRIX);
-                    }
-                    BassAsioUtils.DecodingChannels[this.FHandle] = true;
-                }
+                double decoding;
+                this.FPinInIsDecoding.GetValue(0,out decoding);
+
+                MixerChannelInfo mixerinfo = new MixerChannelInfo();
+                mixerinfo.IsDecoding = decoding == 1;
+                mixerinfo.NumChans = Convert.ToInt32(numchans);
+                mixerinfo.Play = true;
+                ChannelsManager.CreateChannel(mixerinfo);
+
+
+                this.FHandle = mixerinfo.InternalHandle;
+                updatechans = true;
 
                 this.FPinOutHandle.SetValue(0, this.FHandle);
             }
@@ -114,40 +125,37 @@ namespace vvvv.Nodes
             #region Channel pins changed
             if (this.FPinInChannels.PinIsChanged)
             {
-                List<int> newchans = new List<int>();
-                for (int i = 0; i < this.FPinInChannels.SliceCount; i++)
+                if (this.FHandle != 0)
                 {
-                    //Get list of new channels
-                    double ch;
-                    this.FPinInChannels.GetValue(i, out ch);
-                    if (ch != 0 && ch != -1)
+                    List<int> newchans = new List<int>();
+                    for (int i = 0; i < this.FPinInChannels.SliceCount; i++)
                     {
-                        newchans.Add(Convert.ToInt32(ch));
+                        //Get list of new channels
+                        double ch;
+                        this.FPinInChannels.GetValue(i, out ch);
+                        if (ch != 0 && ch != -1)
+                        {
+                            newchans.Add(Convert.ToInt32(ch));
+                        }
                     }
+
+                    //Update new channel list
+                    this.FChannels = newchans;
+                }
+                else
+                {
+                    this.FChannels.Clear();
                 }
 
-                //Remove channels not in the list anymore
-                foreach (int oldchan in this.FChannels)
-                {
-                    if (!newchans.Contains(oldchan))
-                    {
-                        BassMix.BASS_Mixer_ChannelRemove(oldchan);
-                    }
-                }
-
-                //Add new channels
-                foreach (int newchan in newchans)
-                {
-                    if (!this.FChannels.Contains(newchan))
-                    {
-                        BassMix.BASS_Mixer_StreamAddChannel(this.FHandle, newchan, BASSFlag.BASS_MIXER_MATRIX);
-                    }
-                }
-
-                //Update new channel list
-                this.FChannels = newchans;
+                updatechans = true; 
             }
             #endregion
+
+            if (updatechans)
+            {
+                MixerChannelInfo mixerinfo = (MixerChannelInfo)ChannelsManager.GetChannel(this.FHandle);
+                mixerinfo.Streams = this.FChannels;
+            }
 
             //Ned to check the play pause status on the play pin of the decoding channels
             ResetPlay();
@@ -159,13 +167,17 @@ namespace vvvv.Nodes
         {
             foreach (int handle in this.FChannels)
             {
-                if (BassAsioUtils.IsChannelPlay(handle))
+                ChannelInfo info = ChannelsManager.GetChannel(handle);
+                if (info.BassHandle != null)
                 {
-                    BassMix.BASS_Mixer_ChannelPlay(handle);
-                } 
-                else 
-                {
-                    BassMix.BASS_Mixer_ChannelPause(handle);
+                    if (info.Play)
+                    {
+                        BassMix.BASS_Mixer_ChannelPlay(handle);
+                    }
+                    else
+                    {
+                        BassMix.BASS_Mixer_ChannelPause(handle);
+                    }
                 }
             }
         }
@@ -173,8 +185,7 @@ namespace vvvv.Nodes
 
         public void Dispose()
         {
-            BassAsioUtils.DecodingChannels.Remove(this.FHandle);
-            Bass.BASS_StreamFree(this.FHandle);
+
         }
     }
 }
