@@ -4,6 +4,7 @@ using System.Text;
 using VVVV.PluginInterfaces.V1;
 using Un4seen.Bass.AddOn.Mix;
 using Un4seen.Bass;
+using BassSound.Internals;
 
 namespace AsioBassSound.Mixer
 {
@@ -16,9 +17,9 @@ namespace AsioBassSound.Mixer
             {
                 IPluginInfo Info = new PluginInfo();
                 Info.Name = "SetMixerLevel";
-                Info.Category = "BassAsio";
+                Info.Category = "Bass";
                 Info.Version = "";
-                Info.Help = "Set Mixer levelfor Bass Asio";
+                Info.Help = "Set Mixer levelfor Bass";
                 Info.Bugs = "";
                 Info.Credits = "";
                 Info.Warnings = "";
@@ -42,7 +43,6 @@ namespace AsioBassSound.Mixer
         private IValueOut FPinOutHandle;
 
         private int FHandle = 0;
-        private int FMixerHandle = 0;
         private BASS_CHANNELINFO FMixerInfo;
         private BASS_CHANNELINFO FChannelInfo;
         private List<int> FChannels = new List<int>();
@@ -80,28 +80,27 @@ namespace AsioBassSound.Mixer
         #region Evaluate
         public void Evaluate(int SpreadMax)
         {
-            int oldmixhandle = this.FMixerHandle;
-            if (this.FPinInHandle.PinIsChanged || this.FMixerHandle == 0)
+            bool updatelevel = false;
+
+            if (this.FPinInHandle.PinIsChanged)
             {
                 double dhandle;
                 this.FPinInHandle.GetValue(0, out dhandle);
                 this.FHandle = Convert.ToInt32(dhandle);
-
-                if (this.FHandle == 0)
+                if (ChannelsManager.Exists(this.FHandle))
                 {
-                    this.FMixerHandle = 0;
+                    updatelevel = true;
                 }
                 else
                 {
-                    this.FMixerHandle = BassMix.BASS_Mixer_ChannelGetMixer(this.FHandle);
-                    this.FMixerInfo = Bass.BASS_ChannelGetInfo(FMixerHandle);
-                    this.FChannelInfo = Bass.BASS_ChannelGetInfo(this.FHandle);
-                    
+                    this.FHandle = 0;
                 }
-                this.FPinOutHandle.SetValue(0, dhandle);
+
+                this.FPinOutHandle.SliceCount = 1;
+                this.FPinOutHandle.SetValue(0, this.FHandle);      
             }
 
-            if ((oldmixhandle != this.FMixerHandle && this.FMixerHandle != 0) || (this.FPinInLevel.PinIsChanged && this.FMixerHandle != 0))
+            if (this.FPinInLevel.PinIsChanged || updatelevel)
             {
                 UpdateMatrix();
             }
@@ -110,32 +109,43 @@ namespace AsioBassSound.Mixer
 
         private void UpdateMatrix()
         {
-            
-            float[,] matrix = new float[this.FMixerInfo.chans, this.FChannelInfo.chans];
-            //BassMix.BASS_Mixer_ChannelGetMatrix(this.FHandle, matrix);
-            int idx = 0;
+            double dhandle;
+            this.FPinInHandle.GetValue(0, out dhandle);
 
-            
-            for (int i = 0; i < this.FMixerInfo.chans; i++)
+            ChannelInfo info = ChannelsManager.GetChannel(Convert.ToInt32(dhandle));
+            int mixerhandle = 0;
+
+            if (info.BassHandle.HasValue)
             {
-                for (int j = 0; j < this.FChannelInfo.chans; j++)
-                {
-                    double level;
-                    this.FPinInLevel.GetValue(idx, out level);
-                    matrix[i, j] = (float)level;
-
-                    idx++;
-                    if (idx == this.FPinInLevel.SliceCount)
-                    {
-                        idx = 0;
-                    }
-                }
+                mixerhandle = BassMix.BASS_Mixer_ChannelGetMixer(info.BassHandle.Value);
             }
 
-            
+            if (mixerhandle != 0)
+            {
+                this.FMixerInfo = Bass.BASS_ChannelGetInfo(mixerhandle);
+                this.FChannelInfo = Bass.BASS_ChannelGetInfo(info.BassHandle.Value);
+                float[,] matrix = new float[this.FMixerInfo.chans, this.FChannelInfo.chans];
+                //BassMix.BASS_Mixer_ChannelGetMatrix(this.FHandle, matrix);
+                int idx = 0;
 
 
-            BassMix.BASS_Mixer_ChannelSetMatrix(this.FHandle, matrix);
+                for (int i = 0; i < this.FMixerInfo.chans; i++)
+                {
+                    for (int j = 0; j < this.FChannelInfo.chans; j++)
+                    {
+                        double level;
+                        this.FPinInLevel.GetValue(idx, out level);
+                        matrix[i, j] = (float)level;
+
+                        idx++;
+                        if (idx == this.FPinInLevel.SliceCount)
+                        {
+                            idx = 0;
+                        }
+                    }
+                }
+                BassMix.BASS_Mixer_ChannelSetMatrix(info.BassHandle.Value, matrix);
+            }
         }
     }
 }
