@@ -4,7 +4,9 @@ Bug Fixes:
 -Fixed loop refresh issue
 -Fixed filename and mono pin refresh issue (any of those reset the track).
 -Merged both FileStream (Asio and Bass) into a single filestream.
--Aded own channel info
+-Added own channel info
+-Updated Mixer to be decoding or not (works with both asio and non asio)
+
 
 
 Version 0.3.1
